# musicopia

./: index.html  package.json  vite.config.ts
src/: App.js  App.tsx  App.vue  dom.js  index.html  index.tsx  main.js  reactive.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  tauri_commands.rs
src/components/: AlbumArt.vue  AlbumCard.tsx  BackwardButton.js  Container.vue  ForwardButton.js  PlayBackBar.js  PlayList.vue  PlayPauseButton.js  PlayerControl.vue  TitleBar.tsx  TitleBar.vue  TrackInfo.vue
src/types/: Metadata.ts
src/utils/: formatSampleRate.ts
