[package]
name = "musicopia"
version = "1.0.0"
description = "A Music Player App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
tauri = { version = "1.7.1", features = [ "api-all", "macos-private-api"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
rodio = "0.19.0"
lofty = "0.21.0"
base64 = "0.22.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
